# humanoid-policy

./: .gitignore  COMMANDS.md  README.md  pyproject.toml
.claude/commands/: tdmpc-advisor.md  tdmpc-engineer.md
configs/: leg_policy_contract.json  policy_latest.yaml  poses.yaml
deploy/: README.md
deploy/squat/: leg_policy_contract.json  policy.onnx  policy.onnx.data  policy.pt  policy_latest.yaml
deploy/stability/: policy.onnx  policy.onnx.data  policy.pt  policy_latest.yaml
deploy/standup/: leg_policy_contract.json  policy.onnx  policy.onnx.data  policy.pt  policy_latest.yaml
deploy/walk/: leg_policy_contract.json  policy.onnx  policy.onnx.data  policy.pt  policy_latest.yaml
deploy/walk/archive/2026-07-17_eureka-g2c3-fullprofile/: ARCHIVE_NOTE.md  policy.onnx.data  policy.pt  policy_latest.yaml
docs/: walk-policy-divergence-report.md
docs/proactive_world_model/: DESIGN.md
eureka/: README.md  __init__.py  config.py  evaluate.py  propose.py  propose_local.py  run.py  run_persistent.py  search.py  tb_utils.py
scripts/rsl_rl/: eval_plant_compare.py  plateau.py  play.py  pose_editor.py  profiles.py  train.py  variants.py
scripts/tdmpc/: EXPERIMENTS.md  RUNBOOK.md  bench_precision.py  bench_update.py  bootstrap.py  bootstrap_queue.jsonl  check_buffer.py  check_model.py  env_adapter.py  eval_smoothness.py  grade_run.py  queue.jsonl  run_supervisor.sh  supervisor.py  train.py  trainer.py
source/humanoid_policy/: README.md  pyproject.toml
source/humanoid_policy/humanoid_policy/: pose_lib.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/: __init__.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/standup/: __init__.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/standup/config/: __init__.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/standup/config/biped/: __init__.py  env_cfg.py  squat_env_cfg.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/standup/config/biped/agents/: rsl_rl_ppo_cfg.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/standup/config/humanoid/: __init__.py  env_cfg.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/standup/config/humanoid/agents/: __init__.py  rsl_rl_ppo_cfg.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/standup/mdp/: __init__.py  rewards.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/velocity/: velocity_env_cfg.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/velocity/config/biped/: __init__.py  env_cfg.py  env_cfg_tdmpc.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/velocity/config/biped/agents/: __init__.py  rsl_rl_ppo_cfg.py  tdmpc_cfg.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/velocity/config/humanoid/: __init__.py  env_cfg.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/velocity/config/humanoid/agents/: rsl_rl_ppo_cfg.py
source/humanoid_policy/humanoid_policy/tasks/locomotion/velocity/mdp/: __init__.py  commands.py  curriculums.py  events.py  rewards.py  terminations.py
source/humanoid_policy/humanoid_policy/tdmpc/: THIRD_PARTY.md  __init__.py  agent.py  buffer.py  config.py  world_model.py
source/humanoid_policy/humanoid_policy/tdmpc/common/: __init__.py  init.py  layers.py  math.py  scale.py
source/humanoid_policy_assets/: .gitignore  README.md  postprocess.py  pyproject.toml
source/humanoid_policy_assets/data/robots/berkeley_humanoid/berkeley_humanoid_lite/urdf/: berkeley_humanoid_lite.urdf  berkeley_humanoid_lite_biped.urdf
source/humanoid_policy_assets/data/robots/berkeley_humanoid/berkeley_humanoid_lite/usd/: berkeley_humanoid_lite.usd
source/humanoid_policy_assets/data/robots/berkeley_humanoid/berkeley_humanoid_lite/usd/configuration/: berkeley_humanoid_lite_physics.usd
source/humanoid_policy_assets/data/robots/humanoid/urdf/: config.json  humanoid.urdf  humanoid_biped.urdf
source/humanoid_policy_assets/data/robots/humanoid/usd/: humanoid.usd  humanoid_biped.usd
source/humanoid_policy_assets/data/robots/humanoid/usd/configuration/: humanoid_biped_physics.usd  humanoid_biped_sensor.usd  humanoid_physics.usd
source/humanoid_policy_assets/humanoid_policy_assets/actuators/: __init__.py  model_loader.py  stickslip_actuator.py
source/humanoid_policy_assets/humanoid_policy_assets/configs/actuators/: PROVENANCE.md
source/humanoid_policy_assets/humanoid_policy_assets/robots/: __init__.py  berkeley_humanoid_lite.py  humanoid.py
